--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <!-- Google Fonts: Pairot One -->
     <link href="https://fonts.googleapis.com/css2?family=Pairot+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/qmv2bju.css">
+    <link href="https://fonts.googleapis.com/css2?family=Babylonica&display=swap" rel="stylesheet">
     <!-- Import 'All Round Gothic' font (using a placeholder link here as example) -->
     <meta
       name="description"
@@ -31,7 +32,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="overflow-y: hidden; scrollbar-width: none;">
+  <body style="overflow-y: hidden; overflow-x: hidden; scrollbar-width: none;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
